docs(readme): status badges, local run and CI overview; Sonar analysis now runs the tests
Badges: CI, Docker image, latest release, SonarCloud coverage / quality gate /
bugs / code smells (project badge token, read-only). The Sonar workflow drops
-DskipTests so JaCoCo coverage reaches SonarCloud; sonar.java.source aligned
with the Java 25 build.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>